DOD-1264 Resolve conflicts
